--- a/fuzzy_logic_and_fuzzy_set.ipynb
+++ b/fuzzy_logic_and_fuzzy_set.ipynb
@@ -256,19 +256,17 @@
     "# TODO:\n",
     "# Write the indicator function of intersection, union, negation operators of set A and B with values of X,\n",
     "# then plot them\n",
+    "ind_A_intersect_B=None     \n",
+    "# Indicator function of intersection of A and B\n",
+    "# Start the code here\n",
     "def Intersect(A,B):\n",
     "    temparray=A.copy()\n",
     "    i=0\n",
     "    while i<len(temparray):\n",
     "          temparray[i]=1 if (temparray[i]==1 or B[i]==1) else 0\n",
     "          i=i+1\n",
-    "    return temparray      \n",
-    "           \n",
-    "\n",
-    "\n",
-    "# Indicator function of intersection of A and B\n",
-    "ind_A_intersect_B = Intersect(indA,indB)\n",
-    "# Start the code here\n"
+    "    return temparray \n",
+    "ind_A_intersect_B = Intersect(indA,indB)    "
    ]
   },
   {
@@ -312,6 +310,8 @@
    "outputs": [],
    "source": [
     "# TODO: Indicator function of union of A and B\n",
+    "ind_A_union_B=None\n",
+    "# Start the code here\n",
     "def Union(A,B):\n",
     "    temparray=A.copy()\n",
     "    i=0\n",
@@ -322,9 +322,7 @@
     "              temparray[i]=0    \n",
     "          i=i+1\n",
     "    return temparray     \n",
-    "\n",
-    "ind_A_union_B =Union(indA,indB)\n",
-    "# Start the code here\n"
+    "ind_A_union_B =Union(indA,indB)"
    ]
   },
   {
@@ -368,6 +366,8 @@
    "outputs": [],
    "source": [
     "# TODO: Indicator function of negation of A\n",
+    "ind_not_A=None\n",
+    "# Start the code here\n",
     "def Negation(A,B):\n",
     "    temparray=A.copy()\n",
     "    i=0\n",
@@ -377,8 +377,7 @@
     "    return temparray     \n",
     "\n",
     "\n",
-    "ind_not_A = Negation(indA,indB)\n",
-    "# Start the code here\n"
+    "ind_not_A = Negation(indA,indB)\n"
    ]
   },
   {
