--- a/fuzzy_inference_system.ipynb
+++ b/fuzzy_inference_system.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -200,17 +200,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\william\\OneDrive\\桌面\\學校上課檔案\\智慧系統理論與實務\\codeworks\\ME5061-Intelligent-Systems-Theory-and-Practice-master\\ME5061-Intelligent-Systems-Theory-and-Practice-master\\assignment-2\\fuzzy_system\\fuzzy_set.py:136: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "c:\\Users\\william\\OneDrive\\桌面\\學校上課檔案\\智慧系統理論與實務\\codeworks\\ME5061-Intelligent-Systems-Theory-and-Practice-master\\ME5061-Intelligent-Systems-Theory-and-Practice-master\\assignment-2\\fuzzy_system\\fuzzy_set.py:137: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  t1fs.dom[i]=(nox-a)/(m-a)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<fuzzy_system.fuzzy_set.FuzzySet at 0x1a7c2748b80>"
+       "<fuzzy_system.fuzzy_set.FuzzySet at 0x2360d268220>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -237,10 +237,10 @@
     {
      "data": {
       "text/plain": [
-       "<fuzzy_system.fuzzy_set.FuzzySet at 0x1a7c2748a60>"
+       "\"\\ncpu_clockrate=FuzzyVariableInput('CPU_frequency',20,100,100)\\ncpu_clockrate.add_triangular('Low',20,20,60)\\ncpu_clockrate.add_triangular('High',50,100,100)\\n\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,12 +252,17 @@
     "humidity.add_triangular('Dry',20,20,60)\n",
     "humidity.add_trapezoidal('Normal',30,50,70,90)\n",
     "humidity.add_triangular('Wet',60,100,100)\n",
-    "#humidity.plot_variable()\n"
+    "#humidity.plot_variable()\n",
+    "'''\n",
+    "cpu_clockrate=FuzzyVariableInput('CPU_frequency',20,100,100)\n",
+    "cpu_clockrate.add_triangular('Low',20,20,60)\n",
+    "cpu_clockrate.add_triangular('High',50,100,100)\n",
+    "'''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -267,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "<fuzzy_system.fuzzy_set.FuzzySet at 0x1a7c2748f10>"
+       "<fuzzy_system.fuzzy_set.FuzzySet at 0x2360b01e2e0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,6 +289,10 @@
     "motor_speed.add_triangular('Fast',50,100,100)\n",
     "#motor_speed.plot_variable()\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -307,6 +316,7 @@
     "system = FuzzySystem()\n",
     "system.add_input_variable(temp)\n",
     "system.add_input_variable(humidity)\n",
+    "#system.add_input_variable(cpu_clockrate)\n",
     "system.add_output_variable(motor_speed)\n",
     "\n",
     "#FuzzyVariableInput.plot_variable(temp)\n",
@@ -342,17 +352,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\nsystem.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Dry','CPU_frequency':'Low'},consequent_clauses={'Speed':'Slow'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Normal','CPU_frequency':'Low'},consequent_clauses={'Speed':'Slow'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Normal','CPU_frequency':'High'},consequent_clauses={'Speed':'Slow'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Dry','CPU_frequency':'High'},consequent_clauses={'Speed':'Slow'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Dry','CPU_frequency':'Low'},consequent_clauses={'Speed':'Slow'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Dry','CPU_frequency':'High'},consequent_clauses={'Speed':'Slow'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Wet','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Wet','CPU_frequency':'High'},consequent_clauses={'Speed':'Moderate'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Normal','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Normal','CPU_frequency':'High'},consequent_clauses={'Speed':'Moderate'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Wet','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Dry','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Wet','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Dry','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Normal','CPU_frequency':'Low'},consequent_clauses={'Speed':'Fast'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Normal','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Wet','CPU_frequency':'Low'},consequent_clauses={'Speed':'Fast'})\\nsystem.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Wet','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'}) \\n\\n\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# TODO: Write the remaining rules and add to the system\n",
     "# Write your code below\n",
+    "\n",
     "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Dry'},\n",
     "                consequent_clauses={'Speed':'Slow'})\n",
     "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Dry'},\n",
@@ -371,8 +393,28 @@
     "                consequent_clauses={'Speed':'Fast'})  \n",
     "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Wet'},\n",
     "                consequent_clauses={'Speed':'Fast'})   \n",
+    "'''\n",
     "\n",
-    "              \n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Dry','CPU_frequency':'Low'},consequent_clauses={'Speed':'Slow'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Normal','CPU_frequency':'Low'},consequent_clauses={'Speed':'Slow'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Normal','CPU_frequency':'High'},consequent_clauses={'Speed':'Slow'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Dry','CPU_frequency':'High'},consequent_clauses={'Speed':'Slow'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Dry','CPU_frequency':'Low'},consequent_clauses={'Speed':'Slow'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Dry','CPU_frequency':'High'},consequent_clauses={'Speed':'Slow'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Wet','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Cold','Humidity':'Wet','CPU_frequency':'High'},consequent_clauses={'Speed':'Moderate'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Normal','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Normal','CPU_frequency':'High'},consequent_clauses={'Speed':'Moderate'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Wet','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Dry','CPU_frequency':'Low'},consequent_clauses={'Speed':'Moderate'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Medium','Humidity':'Wet','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Dry','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Normal','CPU_frequency':'Low'},consequent_clauses={'Speed':'Fast'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Normal','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Wet','CPU_frequency':'Low'},consequent_clauses={'Speed':'Fast'})\n",
+    "system.add_rule(antecedent_clauses={'Temperature':'Hot','Humidity':'Wet','CPU_frequency':'High'},consequent_clauses={'Speed':'Fast'}) \n",
+    "\n",
+    "'''\n",
     "                                                                                                        "
    ]
   },
@@ -390,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -418,7 +460,107 @@
       "last_dom_value 0.0\n",
       "last_dom_value 0.0\n",
       "last_dom_value 0.303030303030303\n",
-      "last_dom_value 0.0\n"
+      "last_dom_value 0.0\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n"
      ]
     },
     {
@@ -427,19 +569,19 @@
        "{'Speed': 37.823656163861024}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "output = system.evaluate_output(input_values={'Temperature':18, 'Humidity':60})\n",
-    "output"
+    "output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
